--- a/Lista10_Structs/Lista10_Structs/Lista10_Structs.vcxproj
+++ b/Lista10_Structs/Lista10_Structs/Lista10_Structs.vcxproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <ClCompile Include="questao1.c" />
     <ClCompile Include="questao2.c" />
+    <ClCompile Include="questao3.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
